--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,25 @@
   <title>Conversation</title>
 
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <section id="overlay">
-    <p id="info">There are no more of these HITs available.</p>
-  </section>
-  <section id="chat" style="display: none;">
-    <section id="bubbles">
+  <section id="app">
+    <section id="overlay" v-if="info">
+      <p v-html="info"></p>
     </section>
-    <textarea id="textarea-message" placeholder="Write a message..."></textarea>
-    <button id="button-send">Send</button>
+    <section v-if="!info" id="chat">
+      <section ref="bubbles" id="bubbles">
+        <section v-for="(bubble, index) in bubbles" :key="index" class="bubble-container" :class="{ self: self(bubble.username) }">
+          <section class="bubble" :class="{ self: self(bubble.username) }">
+            <p class="message">{{ bubble.message.replace(/<\/?[^>]+(>|$)/g, '') }}</p>
+            <p class="timestamp" :class="{ self: self(bubble.username) }">{{ date(bubble.timestamp) }}</p>
+          </section>
+        </section>
+      </section>
+      <textarea v-model="message" v-on:keydown.enter.prevent="send" placeholder="Write a message..." id="textarea-message"></textarea>
+      <button @click="send" id="button-send">Send</button>
+    </section>
   </section>
   
   <script src="chat.js"></script>
