--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Conversation</title>
 
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 <body>
   <section id="app">
