--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </section>
     <section id="ui">
       <button v-if="!info" @click="end()">End conversation</button>
-      <button v-if="!info.startsWith('There')" @click="save()">Save conversation</button>
+      <button v-if="!info.startsWith('There')" @click="save()" :class="{ disabled: bubbles.length === 0 }">Save conversation</button>
     </section>
   </section>
   
